# making-cookies

./: .buildinfo  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  authors.doctree  authors.html  conduct.doctree  conduct.html  contributing.doctree  contributing.html  environment.pickle  genindex.html  history.doctree  history.html  index.doctree  index.html  installation.doctree  installation.html  modules.doctree  modules.html  my_new_package.doctree  my_new_package.html  objects.inv  py-modindex.html  readme.doctree  readme.html  search.html  searchindex.js  setup.cfg  tox.ini  usage.doctree  usage.html
.github/workflows/: tests.yml
_sources/: installation.rst.txt  modules.rst.txt  my_new_package.rst.txt
docs/: Makefile  conf.py  index.rst  make.bat  usage.rst
my_new_package/: __init__.py
my_new_package/tests/: __init__.py  test_my_new_package.py
